# Tekken-Query

./: .gitignore  ARCHITECTURE.md  LICENSE  Main.lean  README.md  ROADMAP.md  TekkenQuery.lean  lake-manifest.json  lakefile.toml
.github/workflows/: ci.yml  release.yml
TekkenQuery/: Csv.lean  Export.lean  Filter.lean  Frame.lean  Json.lean  Models.lean  Server.lean
TekkenQuery/Csv/: Parser.lean  Split.lean  Types.lean
cli/: Cargo.toml
cli/src/: aliases.rs  completion.rs  data.rs  display.rs  error.rs  fetch.rs  filter.rs  interactive.rs  lean_server.rs  main.rs  model.rs  roster_query.rs
docs/: lean4_datatypes.md  lean4_monads.md  lean4_patterns.md  lean4_polymorphism.md  lean4_reference_index.md  lean4_standard_classes.md  lean4_structures.md
launcher/: Cargo.toml  build.rs
launcher/src/: main.rs
launchers/: tekken-query.bat  tekken-query.sh
scripts/: build.sh  start.sh  update-data.sh
