[package]
name = "tekken-cli"
version = "0.1.2"
edition = "2024"
description = "Interactive Tekken 8 frame data query tool"

[dependencies]
clap = { version = "4", features = ["derive"] }
csv = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
colored = "3"
ureq = { version = "2", features = ["json"] }
rustyline = "15"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "deny" }
pedantic = { level = "deny" }
unwrap_used = { level = "deny" }
expect_used = { level = "deny" }
panic = { level = "deny" }
unreachable = { level = "deny" }
todo = { level = "deny" }
unimplemented = { level = "deny" }
cast_possible_truncation = { level = "deny" }
cast_sign_loss = { level = "deny" }
cast_possible_wrap = { level = "deny" }
