[package]
name = "tekken-query"
version = "0.1.0"
edition = "2024"
description = "Launcher for Tekken Query interactive mode"

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "deny" }
pedantic = { level = "deny" }
unwrap_used = { level = "deny" }
expect_used = { level = "deny" }
panic = { level = "deny" }
